--- a/libvmi_extension/CMakeLists.txt
+++ b/libvmi_extension/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.6)
 
 if(ENABLE_BUILD_VMM)
     add_subproject(boxy_libvmi_extension vmm
-        DEPENDS bfvmm
+        DEPENDS boxy_bfvmm
         SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/extension
     )
 endif()
